# Automated-Security-Testing-Pipeline-for-Large-Language-Models

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: experiment_01.yaml
data/: queries.json
docs/: development_implementation_guide.md  experiment_flow_diagram.md  method.md  phase1_attack_generation.md  phase2_injection_indexing.md  phase3_trigger_retrieval.md  phase4_defense.md  phase5_generation_evaluation.md  project_background.md  project_context.md  reference_analysis.md
src/: base.py  clients.py  config.py
src/pipeline/: phase1.py
src/prompts/: blocker.md  hijack.md  stealth.md
